# neddf

./: .gitignore  .gitignore copy  Makefile  README.md  pyproject.toml
.github/workflows/: environment-test.yaml  lint-and-test.yaml
config/: config.yaml  default.yaml
config/dataset/: bunny_smoke.yaml  nerf_synthetic.yaml  test.yaml
config/loss/: neddf_loss.yaml  nerf_loss.yaml
config/network/: neddf.yaml  nerf.yaml  neus.yaml
config/render/: neddf_render.yaml  nerf_render.yaml
config/trainer/: default.yaml  neddf_tracker.yaml  neddf_trainer.yaml  test.yaml
data/bunny_smoke/: README.txt  transforms_test.json
data/test_metalball/: transforms_train.json
docs/: index.html  main.css
environments/: Dockerfile  docker-entrypoint.sh
environments/cpu/: docker-compose.yaml
environments/files_override/mpu/: pyproject.toml
environments/gpu/: docker-compose.yaml
environments/gpu-cui/: docker-compose.yaml
environments/mpu/: docker-compose.yaml
neddf/camera/: __init__.py  base_camera_calib.py  camera.py  pinhole_calib.py
neddf/dataset/: __init__.py  base_dataset.py  nerf_synthetic_dataset.py
neddf/logger/: __init__.py  base_logger.py  nerf_logger_abstract.py  nerf_tb_logger.py  nerf_wandb_logger.py
neddf/loss/: __init__.py  aux_grad_loss.py  base_loss.py  color_loss.py  fields_constraint_loss.py  mask_bce_loss.py  mask_mse_loss.py  range_loss.py
neddf/network/: __init__.py  base_neuralfield.py  neddf.py  nerf.py  neus.py
neddf/nn_module/: __init__.py  positional_encoding.py  scaled_positional_encoding.py  tanh_exp.py
neddf/nn_module/with_grad/: __init__.py  leaky_relu.py  linear.py  positional_encoding.py  relu.py  sigmoid.py  softplus.py  tanh_exp.py
neddf/ray/: __init__.py  ray.py  sampling.py
neddf/render/: __init__.py  base_neural_render.py  nerf_render.py
neddf/scripts/: dataset_visualizer.py  fields_visualizer.py  run.py  run_eval.py  run_track.py
neddf/trainer/: __init__.py  base_trainer.py  neddf_tracker.py  neddf_trainer.py  nerf_trainer.py
pretrained/bunny_smoke/.hydra/: config.yaml  hydra.yaml
pretrained/bunny_smoke/models/: model_02000.pth
test/: conftest.py
test/network/: test_nerf.py
test/nn_module/: test_positional_encoding.py
test/render/: test_nerf_render.py
test/trainer/: test_nerf_trainer.py
tests/: conftest.py  test_environment.py
tests/camera/: test_camera.py
tests/dataset/: test_nerf_synthetic_dataset.py
tests/network/: test_neddf.py  test_nerf.py  test_neus.py
tests/nn_module/: test_positional_encoding.py
tests/nn_module/with_grad/: test_activations.py  test_linear.py  test_positional_encoding.py  test_relu.py  test_softtplus.py  test_tanh_exp.py
tests/render/: test_nerf_render.py
tests/trainer/: test_nerf_trainer.py
