[tool.poetry]
name = "neddf"
version = "0.1.0"
description = "Integrated multiview-stereo pipeline of neuralfields"
authors = ["cvpaper.challenge Neuralfields group"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
setuptools = "59.5.0"
torch = {version = "1.10.2+cu111", source = "pytorch-cu111"}
scipy = "^1.9.0"
tqdm = "^4.64.0"
PyYAML = "^6.0"
opencv-python = "^4.6.0.66"
tensorboard = "^2.9.1"
torchtyping = "^0.1.4"
hydra-core = "^1.2.0"
scikit-image = "^0.19.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pysen = {version = "0.10.2", extras = ["lint"]}

[[tool.poetry.source]]
name = "pytorch-cu111"
url = "https://download.pytorch.org/whl/cu111/"
secondary = true

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"

[tool.pysen.lint.source]
  includes = ["neddf/"]
[[tool.pysen.lint.mypy_targets]]
  paths = ["neddf"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
